dark mode and light theme switching fix

--- a/styles/header.sass
+++ b/styles/header.sass
@@ -65,9 +65,9 @@ nav
 	&.connConnecting
 		color: var(--linkColor)
 	&.connDisconnected
-		color: var(--activeColor)
+		color: black
 	&.connLive
-		color: var(--newColor)
+		color: var(--activeColor)
 	
 #connTooltip
 	display: none
