--- a/styles/list.sass
+++ b/styles/list.sass
@@ -122,6 +122,7 @@
 	line-height: 1
 	small
 		color: inherit
+		opacity: .6
 
 .sTitle
 	margin-right: .25em
